--- a/.github/workflows/annotation.yml
+++ b/.github/workflows/annotation.yml
@@ -4,6 +4,7 @@ jobs:
   log:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "::error::This is an error"
-      - run: echo "::warning:: This is a warning"
-      - run: echo "::notice:: This is a notice"
+      - run: |
+          echo "::error::This is an error"
+          echo "::warning:: This is a warning"
+          echo "::notice:: This is a notice"
